fixed an error in gameview